test/files/neg/t6011.check
t6011.scala:4: error: unreachable code
    case 'a' | 'c' => 1 // unreachable
                      ^
one error found
